--- a/SISDM/src/main/resources/templates/beranda.html
+++ b/SISDM/src/main/resources/templates/beranda.html
@@ -3,38 +3,12 @@
 <head>
   <title>Sistem Informasi Sumber Daya Manusia</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <object th:include="fragments/navbar :: css" th:remove="tag"></object>
+  <object th:include="fragments/navbar :: js" th:remove="tag"></object>
+</head>
 <body>
-
 <!--Bootstrap Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-    <a class="navbar-brand" href="/">SI-SDM</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item px-4">
-          <a class="nav-link" href="#">Karyawan</a>
-        </li>
-        <li class="nav-item px-4">
-          <a class="nav-link" href="#">Presensi</a>
-        </li>
-        <li class="nav-item px-4">
-          <a class="nav-link" href="#">Tambah Tugas</a>
-        </li>
-        <li class="nav-item px-4 dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Filter
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Cari tugas berdasarkan karyawan yang memiliki status tertentu</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Cari karyawan berdasarkan sertifikat</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<nav th:replace="fragments/navbar :: navbar(${''})"></nav>
 <!--End of Navbar -->
 
 <!--Title-->
@@ -52,9 +26,9 @@
 
 <!--Card section-->
 <div class="container text-center">
-  <button type="button" class="btn btn-danger btn-lg mx-3">Karyawan</button>
-  <button type="button" class="btn btn-danger btn-lg mx-3">Presensi</button>
-  <button type="button" class="btn btn-danger btn-lg mx-3">Tambah Tugas</button>
+  <a th:href="@{/karyawan}" class="btn btn-danger btn-lg mx-3">Karyawan</a>
+  <a th:href="@{/presensi}" class="btn btn-danger btn-lg mx-3">Presensi</a>
+  <a th:href="@{/karyawan}" class="btn btn-danger btn-lg mx-3">Tambah Tugas</a>
   <div class="btn-group">
     <button class="btn btn-danger btn-lg dropdown-toggle mx-3" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
      Filter
