--- a/SISDM/src/main/resources/templates/fragments/navbar.html
+++ b/SISDM/src/main/resources/templates/fragments/navbar.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" th:href="@{/karyawan}" th:classappend="${var} == 'karyawan' ? 'active'">Karyawan</a>
             </li>
             <li class="nav-item px-4">
-                <a class="nav-link" th:href="@{/}" th:classappend="${var} == 'presensi' ? 'active'">Presensi</a>
+                <a class="nav-link" th:href="@{/presensi}" th:classappend="${var} == 'presensi' ? 'active'">Presensi</a>
             </li>
             <li class="nav-item px-4">
                 <a class="nav-link" th:href="@{/}" th:classappend="${var} == 'tugas' ? 'active'">Tambah Tugas</a>
