--- a/SISDM/src/main/resources/templates/add-karyawan.html
+++ b/SISDM/src/main/resources/templates/add-karyawan.html
@@ -12,7 +12,7 @@
 <!--End of Navbar -->
 
 <!--Card Section-->
-<div class="row justify-content-center">
+<div class="row justify-content-center my-5">
     <div class="card my-auto">
       <div class="card-body" th:object="${karyawan}">
         <h2 th:text="'Karyawan baru dengan nama ' + *{a_namaDepanKaryawan} + ' ' + *{b_namaBelakangKaryawan} + ' berasil ditambahkan'"></h2>
