--- a/SISDM/src/main/resources/templates/error/400.html
+++ b/SISDM/src/main/resources/templates/error/400.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-  <title>Sistem Informasi Sumber Daya Manusia</title>
+  <title>400 ERROR</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <object th:include="fragments/navbar :: css" th:remove="tag"></object>
   <object th:include="fragments/navbar :: js" th:remove="tag"></object>
 </head>
 <body>
 <!--Bootstrap Navbar-->
-<nav th:replace="fragments/navbar :: navbar(${'karyawan'})"></nav>
+<nav th:replace="fragments/navbar :: navbar(${''})"></nav>
 <!--End of Navbar -->
 
 <!--Card Section-->
 <div class="row justify-content-center my-5">
   <div class="card">
     <div class="card-body" th:object="${karyawan}">
-      <h2 th:text="'Data karyawan dengan nama ' +  *{a_namaDepanKaryawan} + ' ' + *{b_namaBelakangKaryawan} + ' berhasil dihapus'"></h2>
+      <h2 class="text-danger">400 ERROR</h2>
+      <p>Halaman yang Anda cari tidak ditemukan! </p>
       <br>
-      <a class="btn btn-danger" th:href="@{/karyawan}">Kembali</a>
+      <a class="btn btn-danger" th:href="@{/}">Beranda</a>
     </div>
   </div>
 </div>
