feat: finishing Tugas Individu 1 APAP 3 SKS - Allhamdulilah seperti 3 x 3 SKS

--- a/SISDM/src/main/resources/templates/error/400.html
+++ b/SISDM/src/main/resources/templates/error/400.html
@@ -13,11 +13,17 @@
 
 <!--Card Section-->
 <div class="row justify-content-center my-5">
-  <div class="card">
-    <div class="card-body" th:object="${karyawan}">
-      <h2 class="text-danger">400 ERROR</h2>
-      <p>Halaman yang Anda cari tidak ditemukan! </p>
-      <br>
+  <div class="card w-50">
+    <div class="card-header">
+      <h2 class="text-danger">400 ERROR!</h2>
+    </div>
+    <div class="card-body">
+      <p class="font-weight-bold">400 Error</p>
+      <p>Anda mengalami error! Sesungguhnya error adalah hal yang lumrah dalam suatu program. Hal ini disebabkan
+        oleh pembuat program yang juga manusia. Ingat! bahwa manusia tidak ada yang sempurna. Sekali lagi, saya memohon maaf atas
+        error yang dihasilkan sehingga dapat menghasilkan pengurangan nilai pada Tugas Individu 1 APAP ini. Tapi saya mencoba yang terbaik,
+        dalam waktu yang singkat dan tugas yang banyak ini! ╭∩╮（︶︿︶）╭∩╮</p>
+      <br><br>
       <a class="btn btn-danger" th:href="@{/}">Beranda</a>
     </div>
   </div>
