--- a/SISDM/src/main/resources/templates/form-add-karyawan.html
+++ b/SISDM/src/main/resources/templates/form-add-karyawan.html
@@ -62,7 +62,7 @@
                                 <option th:each="sertifikasiEx : ${listSertifikasiExisting}" th:value="${sertifikasiEx.idSertifikat}" th:text="${sertifikasiEx.namaSertifikat}"></option>
                             </select>
                         </td>
-                        <td><input class="form-control" type="date" th:field="*{sertifikatKaryawan[__${iterationStatus.index}__].c_tanggalPengambilan}"/></td>
+                        <td><input class="form-control" type="date" th:field="*{sertifikatKaryawan[__${iterationStatus.index}__].c_tanggalPengambilan}" required/></td>
                         <td><button name="deleteRow" th:value="${iterationStatus.index}" type="submit" class="btn btn-danger">HAPUS</button></td>
                     </tr>
                     <tr>
@@ -76,6 +76,12 @@
         <a class="btn btn-secondary" th:href="@{/karyawan}">Batal</a>
     </form>
 </div>
+
+<!--Bootstrap script-->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!--End of script-->
 
 </body>
 </html>
