--- a/SISDM/src/main/resources/templates/presensi.html
+++ b/SISDM/src/main/resources/templates/presensi.html
@@ -22,7 +22,7 @@
         <h5 class="text-white">Data Presensi</h5>
       </li>
       <li class="list-inline-item float-right">
-        <a th:href="@{/karyawan/tambah}" type="button" class="btn btn-outline-light">+ Tambah Presensi</a>
+        <a th:href="@{/presensi/tambah}" type="button" class="btn btn-outline-light">+ Tambah Presensi</a>
       </li>
     </ul>
   </div>
@@ -45,12 +45,18 @@
         <td th:if="${presensi.status} == 1" class="text-center text-success"><b>TEPAT WAKTU</b></td>
         <td th:unless="${presensi.status} == 1" class="text-center text-danger"><b>TERLAMBAT</b></td>
         <td class="text-center">
-          <button class="btn btn-success">Detail</button>
+          <a class="btn btn-success" th:href="@{/presensi/} + ${presensi.idPresensi}">Detail</a>
         </td>
       </tr>
       </tbody>
     </table>
   </div>
 </div>
+
+<!--Bootstrap script-->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!--End of script-->
 </body>
 </html>
