--- a/SISDM/src/main/resources/templates/view-karyawan.html
+++ b/SISDM/src/main/resources/templates/view-karyawan.html
@@ -16,7 +16,7 @@
 <h1 class="text-center" style="font-family: 'Comic Sans MS'">Detail Karyawan</h1>
 <div class="w-50 mx-auto">
     <div class="d-flex flex-row-reverse my-2">
-        <form action="" method="post">
+        <form th:action="${karyawan.idKaryawan} + @{/hapus}" method="post">
             <input type="hidden" th:field="${karyawan.a_namaDepanKaryawan}">
             <input type="hidden" th:field="${karyawan.b_namaBelakangKaryawan}">
             <input type="hidden" th:field="${karyawan.jenisKelaminKaryawan}">
@@ -25,7 +25,7 @@
             <input type="submit" name="hapus" value="Hapus" class="btn btn-danger w-10"/>
         </form>
 <!--        <button class="btn btn-danger w-10" name="hapus">Hapus</button>-->
-        <a href="" class="btn btn-warning mx-3 w-10">Edit</a>
+        <a th:href="@{/karyawan/} + ${karyawan.idKaryawan} + @{/ubah}" class="btn btn-warning mx-3 w-10">Edit</a>
     </div>
     <div class="card">
         <div class="card-body">
@@ -86,5 +86,11 @@
 
   </div>
 </div>
+
+<!--Bootstrap script-->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!--End of script-->
 </body>
 </html>
